style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    
}
body{
    min-height: 100vh;
    background-color: hsl(47, 88%, 63%);
    font-family: sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
}
.card{
    background-color: #ffffff;
    max-width: 384px;
    width: 90%;
    padding: 24px;
    border: 1px solid #111111;
    border-radius: 20px;
    box-shadow: 8px 8px 0px #111111;
}
.card-img{
    width: 100%;
    height: auto;
    border-radius: 10px;
    margin-bottom: 24px;

}
.badg{
    background-color: #f4d03f;
    color: #111111;
    font-weight: 800;
    padding: 4px 12px;
    border-radius: 4px;
    font-size: 14px;
   
    
}
.date{
    font-size: 14px;
    color: #111111;
    margin-top: 12px;
    margin-bottom: 12px;

}
.title{
    font-size: 22px;
    font-weight: 800;
    color: #111111;
    margin-bottom: 12px;
    cursor: pointer;
}
.title:hover{
    color: #f4d03f;
}
.description{
    font-size: 14px;
    color: #7f7f7f;
    line-height:1.5;
    margin-bottom: 24px;

}
.author{
    display: flex;
    align-items: center;
    gap: 12px;
}
.avatar-img{
    width: 32px;
    height: 32px;

}
.author-name{
    font-size: 14px;
    font-weight: 800;
    color: #111111;
}

